src/styles/sidebar.css
.sidebar {
    display: flex;
    flex-direction: column;
    width: 300px;
    
    background-color: var(--primary-color)
}

.navbar * {
    color: white !important;
    text-align: center;
}

.nav-item {
    padding: 1rem 0;
}

.navbar-toggler {
    border: none !important;
}

.navbar-toggler:focus {
    box-shadow: none !important;
}

.navbar-collapse {
    flex-grow: 0;
}

.nav-link:hover {
    background-color: #292a38;
}

.nav-list {
    width: 100%;
}

.sidebar-nav {
    margin-top: 20px;
    padding: 0;
}

#navbarSupportedContent {
    width: 100%;
    margin-top: 8rem;
}

